# rsq

./: Cargo.toml  README.md  design.md
src/: client.rs  lib.rs  main.rs  msg_stream.rs
src/messaging/: channel.rs  errors.rs  mod.rs  msg.rs  peer.rs  router.rs
src/monoio_bincode/: mod.rs
