[package]
name = "rsq"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
bytes = { version = "1", features = ["serde"] }
clap = { version = "4.5.36", features = ["env", "cargo"] }
fdlimit = "0.2.1"
flume = "0.10.14"
futures = "0.3.31"
mimalloc = { version = "0.1.46", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
slotmap = "1.0.7"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["bincode", "json"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "parking_lot",
  "env-filter",
] }

[profile.release]
lto = true
