[package]
name = "rsq"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
argh = "0.1.13"
bincode = { version = "2.0.1", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }
clap = { version = "4.5.39", features = ["env", "cargo"] }
fdlimit = "0.3.0"
flume = "0.11.1"
futures = "0.3.31"
local-sync = "0.1.1"
mimalloc = { version = "0.1.46", default-features = false }
monoio = { version = "0.2.4", default-features = false, features = [
  "async-cancel",
  "bytes",
  "flume",
  "io-uring",
  "iouring",
  #"legacy",
  "macros",
  "mio",
  "monoio-macros",
  "nix",
  "splice",
  "tracing",
  "utils",
] }
monoio-codec = "0.3.4"
serde = { version = "1.0.219", features = ["derive"] }
slotmap = "1.0.7"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "parking_lot",
  "env-filter",
] }

[profile.release]
lto = true

[patch.crates-io]
monoio = { path = "/home/kaspar/src/monoio/monoio" }
